--- a/XF.Material/FormsResources/Typography/MaterialTypography.xaml
+++ b/XF.Material/FormsResources/Typography/MaterialTypography.xaml
@@ -42,5 +42,18 @@
     <OnPlatform x:Key="Material.FontAttribute.Bold"
                 x:TypeArguments="FontAttributes"
                 Default="Bold" />
+    
+    <OnPlatform x:TypeArguments="x:String" x:Key="FontAwesomeBrands">
+        <On Platform="Android" Value="Fonts/FontAwesome5Brands.otf#Regular" />
+        <On Platform="iOS" Value="Font Awesome 5 Free" />
+    </OnPlatform>
+    <OnPlatform x:TypeArguments="x:String"  x:Key="FontAwesomeSolid">
+        <On Platform="Android" Value="Fonts/FontAwesome5Solid.otf#Regular" />
+        <On Platform="iOS" Value="FontAwesome5Free-Solid" />
+    </OnPlatform>
+    <OnPlatform x:TypeArguments="x:String" x:Key="FontAwesomeRegular">
+        <On Platform="Android" Value="Fonts/FontAwesome5Regular.otf#Regular" />
+        <On Platform="iOS" Value="FontAwesome5Free-Regular" />
+    </OnPlatform>
 
 </ResourceDictionary>
