--- a/XF.Material/UI/MaterialDateField.xaml
+++ b/XF.Material/UI/MaterialDateField.xaml
@@ -18,8 +18,9 @@
             </View.GestureRecognizers>
             <Grid.RowDefinitions>
                 <RowDefinition x:Name="_autoSizingRow"
-                               Height="56" />
-                <RowDefinition Height="20" />
+                               Height="36" />
+                <RowDefinition x:Name="rowHelper" Height="5" />
+                <RowDefinition x:Name="_autoHelperSizingRow" Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
@@ -32,19 +33,30 @@
                      Grid.ColumnSpan="4"
                      BackgroundColor="#DCDCDC"
                      CornerRadius="4,4,0,0" />
-            <material:MaterialIcon x:Name="leadingIcon"
+            
+            <!--<material:MaterialIcon x:Name="leadingIcon"
                                    Grid.Row="0"
                                    Grid.Column="0"
                                    Margin="12,16,0,16"
                                    HeightRequest="24"
                                    VerticalOptions="Start"
-                                   WidthRequest="24">
+                                   WidthRequest="24">-->
+            <material:MaterialLabel x:Name="leadingIcon"
+                                   Grid.Row="0"
+                                   Grid.Column="0"
+                                   Margin="0,0,0,0"
+                                   VerticalOptions="Center"
+                                   FontSize="Caption"
+                                   FontFamily="{StaticResource FontAwesomeSolid}" >
                 <View.Triggers>
-                    <Trigger TargetType="material:MaterialIcon" Property="Source" Value="{x:Null}">
+                    <Trigger TargetType="material:MaterialLabel" Property="Text" Value="{x:Null}">
+                        <Setter Property="IsVisible" Value="False" />
+                    </Trigger>
+                    <Trigger TargetType="material:MaterialLabel" Property="Text" Value="">
                         <Setter Property="IsVisible" Value="False" />
                     </Trigger>
                 </View.Triggers>
-            </material:MaterialIcon>
+            </material:MaterialLabel>
             <material:MaterialLabel x:Name="placeholder"
                                     Grid.Row="0"
                                     Grid.Column="1"
@@ -61,10 +73,10 @@
                          Grid.Column="1"
                          Grid.ColumnSpan="2"
                          HorizontalOptions="FillAndExpand"
-                         VerticalOptions="Start">
+                         VerticalOptions="Center">
                 
                 <internal:MaterialDatePicker x:Name="datePicker"
-                                        Margin="12,24,12,0"
+                                        Margin="12,4,12,4"
                                         FontFamily="{DynamicResource Material.FontFamily.Body2}"
                                         FontSize="16"
                                         HorizontalOptions="FillAndExpand"
@@ -82,7 +94,8 @@
             
             <BoxView x:Name="persistentUnderline"
                      Grid.Row="0"
-                     Grid.ColumnSpan="4"
+                     Grid.Column="1"
+                     Grid.ColumnSpan="3"
                      Margin="0,0,0,-1"
                      HeightRequest="1"
                      HorizontalOptions="FillAndExpand"
@@ -92,24 +105,33 @@
             
             <BoxView x:Name="underline"
                      Grid.Row="0"
-                     Grid.ColumnSpan="4"
+                     Grid.Column="1"
+                     Grid.ColumnSpan="3"
                      Margin="0,0,0,-1"
                      HeightRequest="2"
                      HorizontalOptions="Center"
                      VerticalOptions="End"
                      WidthRequest="0" />
 
-            <material:MaterialIcon x:Name="clearIcon"
-                                   Grid.Row="0"
+            <material:MaterialLabel x:Name="clearIcon"
+                                    Grid.Row="0"
                                    Grid.Column="2"
-                                   Margin="0,16,12,16"
-                                   HeightRequest="24"
+                                   Margin="0,0,12,0"
+                                    Padding="0"
+                                   FontSize="Caption"
                                    IsVisible="False"
-                                   Source="xf_clear"
-                                   VerticalOptions="Start"
-                                   WidthRequest="24" />
+                                   VerticalOptions="Center"
+                                   FontFamily="{StaticResource FontAwesomeSolid}">
+                <material:MaterialLabel.Triggers>
+                    <DataTrigger Binding="{Binding Source={x:Reference trailingIcon}, Path=IsVisible}"
+                                 TargetType="material:MaterialLabel"
+                                 Value="True">
+                        <Setter Property="Margin" Value="0,0,0,0" />
+                    </DataTrigger>
+                </material:MaterialLabel.Triggers>
+            </material:MaterialLabel>
 
-            <material:MaterialIcon x:Name="trailingIcon"
+            <!--<material:MaterialIcon x:Name="trailingIcon"
                                    Grid.Row="0"
                                    Grid.Column="3"
                                    Margin="0,16,12,16"
@@ -117,22 +139,31 @@
                                    IsVisible="False"
                                    Source="xf_arrow_dropdown"
                                    VerticalOptions="Start"
-                                   WidthRequest="24" />
-            
-            <material:MaterialLabel x:Name="helper"
-                                    Grid.Row="1"
-                                    Grid.Column="0"
+                                   WidthRequest="24" />-->
+            <material:MaterialLabel x:Name="trailingIcon"
+                                   Grid.Row="0"
+                                   Grid.Column="3"
+                                   Margin="0,0,0,0"
+                                    Padding="0"
+                                   FontSize="Caption"
+                                   IsVisible="False"
+                                   VerticalOptions="Center"
+                                   FontFamily="{StaticResource FontAwesomeSolid}" />
+
+            <material:MaterialLabel x:Name="helper" LineHeight=".8"
+                                    Grid.Row="1" Grid.RowSpan="2"
+                                    Grid.Column="1"
                                     Grid.ColumnSpan="3"
-                                    Margin="12,4,12,0"
+                                    Margin="0,4,0,0"
                                     TextColor="#99000000"
                                     TypeScale="Caption">
                 <Label.Triggers>
-                    <Trigger TargetType="Label" Property="Text" Value="">
+                    <!--<Trigger TargetType="Label" Property="Text" Value="">
                         <Setter Property="IsVisible" Value="False" />
                     </Trigger>
                     <Trigger TargetType="Label" Property="Text" Value="{x:Null}">
                         <Setter Property="IsVisible" Value="False" />
-                    </Trigger>
+                    </Trigger>-->
                     <DataTrigger Binding="{Binding Source={x:Reference counter}, Path=IsVisible}"
                                  TargetType="Label"
                                  Value="True">
